# ubirch-protocol-python

./: .gitignore  E61C1C5626A21EA9CA465CBB6854AA5843C7EF94DF167EC5C9DAB12550EB4086  README.md  build.sh  changelog.md  example-client.py  post.py  pyproject.toml  requirements.test.txt  requirements.tools.txt  requirements.txt  setup.py  test-protocol.py  test-report.xml
docs/: DevTools.md  Examples.md  FurtherReading.md  GettingStarted.md  NotPip.md  Quickstart.md  StepByStep.md  _config.yml  index.md  uppLifecycle.md
documentation/: Doxyfile  NotPip.md  Tools.md  aboutGeneratingDocumentation.md  generatingDocumentation.md  index.md
examples/: EXAMPLES.md  GettingStarted.py  QuickstartExample.py  StepByStepExample.py  UbirchWrapper.py  calculate-hash.py  check_fake_backend.py  create-hash.py  data-sender.py  data-verifier.py  data_verifier.py  example-actuator-iiot.py  example-client-iiot.md  example-client-iiot.py  example-client-mqtt.py  example-client.py  example_client_iiot_measure_timing.py  example_client_iiot_plot_timing.py  iiot-actuator-config_example.json  iiot-client-config_example.json  iiot-client-measure_timing_config_example.json  key_update.py  keystore-dumper.py  keystore-tool.py  pack.py  post.py  pubkey-util.py  requirements.txt  test-ecdsa-1.py  test-ecdsa.py  test-identity.py  test-keystore.py  test-protocol.py  test-verification.py  test-web-of-trust.py  test_key_registration.py  trackle-upp-creator.py  trackle.py  ubirch_keys_and_uuids.py  unpack.py  (+9 more)
tests/: __init__.py  test_load_keystore.jks  test_ubirch_api.py  test_ubirch_ks.py  (+9 more)
(+65 files in other folders)
