[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ubirch-protocol"
version = "2.2.0"
authors = [
    { name = "Matthias L. Jugel", email = "matthias.jugel@ubirch.com" },
]
description = "A ubirch-protocol implementation for python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'msgpack>=0.6.0',
    'ed25519>=1.4',
    'pyjks>=17.1.1',
    'requests>=2.19.1'
]

[project.urls]
"Homepage" = "https://github.com/ubirch/ubirch-protocol-python"
